[package]
name = "arp-toolkit"
version = "0.1.0"
authors = ["Oliver Layer <olilay@live.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "examples/example.rs"

[dependencies]
pnet = "0.27.2"
num-traits = "0.2"
num-derive = "0.3"