[package]
name = "arp-toolkit-examples"
version = "0.1.0"
authors = ["Oliver Layer <olilay@live.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "example"
path = "example.rs"

[dependencies]
arp-toolkit = {path = "../src"}