[package]
name = "arp-toolkit-examples"
version = "0.1.0"
authors = ["Oliver Layer <olilay@live.de>"]
edition = "2018"
license = "MIT"
description = "Toolkit for ARP and RARP using Raw sockets in Rust"
homepage = "https://github.com/OliLay/arp-toolkit-rust"
repository = "https://github.com/OliLay/arp-toolkit-rust"
readme = "README.md"
keywords = ["arp", "rarp", "ip-to-mac", "mac-to-ip"]
categories = ["network-programming"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "example"
path = "example.rs"

[dependencies]
arp-toolkit = {path = "../src"}