[package]
name = "arp-toolkit"
version = "0.3.0"
authors = ["Oliver Layer <olilay@live.de>"]
edition = "2018"
license = "MIT"
description = "Toolkit for ARP and RARP using Raw sockets in Rust"
homepage = "https://github.com/OliLay/arp-toolkit-rust"
repository = "https://github.com/OliLay/arp-toolkit-rust"
readme = "../README.md"
keywords = ["arp", "rarp", "ip-to-mac", "mac-to-ip"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libarp"
path = "lib.rs"

[dependencies]
pnet = {version = "0.33", features=["std"]}
num-traits = "0.2"
num-derive = "0.3"
maybe-async = {version = "0.2.6", features=[]}

[features]
default = []
sync = ["maybe-async/is_sync"]
