[package]
name = "arp-toolkit-async-example"
version = "0.2.0"
authors = ["Oliver Layer <olilay@live.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "async-example"
path = "async-example.rs"

[dependencies]
futures = "0.3"
arp-toolkit = {path = "../../src", features = []}