[package]
name = "arp-toolkit-sync-example"
version = "0.2.0"
authors = ["Oliver Layer <olilay@live.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sync-example"
path = "sync-example.rs"

[dependencies]
arp-toolkit = {path = "../../src", features = ["sync"]}

[workspace]